# TangentRider

./: Cargo.toml  LICENSE  README.md  ambient.toml
core/: Cargo.toml  ambient.toml
core/src/: client.rs  server.rs
schema/: ambient.toml
src/: client.rs  server.rs
standard_spawnables/: Cargo.toml  ambient.toml
standard_spawnables/src/: client.rs  server.rs
